--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-    "name": "vault-of-us-app",
-    "author": "Gerardo Camorlinga Jr.",
-    "license": "MIT",
-    "version": "0.1.0",
-    "private": true,
-    "engines": {
-        "node": ">=16.0.0",
-        "yarn": ">=1.22.0",
-        "npm": "please-use-yarn"
-    },
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "next": "12.3.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0"
-    },
-    "devDependencies": {
-        "@types/node": "18.7.20",
-        "@types/react": "18.0.21",
-        "@types/react-dom": "18.0.6",
-        "eslint": "8.24.0",
-        "eslint-config-next": "12.3.1",
-        "typescript": "4.8.3"
-    }
+  "name": "vault-of-us-app",
+  "author": "Gerardo Camorlinga Jr.",
+  "license": "MIT",
+  "version": "0.1.0",
+  "private": true,
+  "engines": {
+    "node": ">=16.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prettier": "prettier --write ."
+  },
+  "dependencies": {
+    "next": "12.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.7.20",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "prettier": "^2.7.1",
+    "typescript": "4.8.3"
+  }
 }
