build: add debugging configuration

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
         "npm": "please-use-yarn"
     },
     "scripts": {
-        "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
         "prettier": "prettier --write .",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "dev": "cross-env NODE_OPTIONS='--inspect' next dev"
     },
     "dependencies": {
         "next": "12.3.1",
@@ -28,6 +28,7 @@
         "@types/node": "18.7.20",
         "@types/react": "18.0.21",
         "@types/react-dom": "18.0.6",
+        "cross-env": "^7.0.3",
         "eslint": "8.24.0",
         "eslint-config-next": "12.3.1",
         "husky": "^8.0.1",
